# brain-games

./: .gitignore  .travis.yml  .viminfo  Makefile  README.md  pyproject.toml
brain_games/: brain_game.py  cli.py  game.py  game_constructor.py  game_engine.py
brain_games/games/: calc.py  even.py  game.py  gcd.py  prime.py  progression.py
brain_games/scripts/: brain_calc.py  brain_even.py  brain_games.py  brain_gcd.py  brain_prime.py  brain_progression.py
kotano_brain_games.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
