[tool.poetry]
name = "kotano_brain_games"
version = "0.2.0"
description = "Hexlet python project called"
authors = ["kotano"]
packages = [
    { include = "brain_games" },
]

[tool.poetry.scripts]
brain-games = "brain_games.scripts.brain_games:main"

[tool.poetry.dependencies]
python = "^3.6.9"
prompt = "^0.4.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
