[tool.poetry]
name = "kotano_brain_games"
version = "0.5.0"
description = "Hexlet python project called 'Brain Games'"
authors = ["kotano"]
packages = [
    { include = "brain_games" },
]

[tool.poetry.scripts]
brain-games = "brain_games.scripts.brain_game:main"
brain-even = "brain_games.scripts.brain_even:main"
brain-calc = "brain_games.scripts.brain_calc:main"
brain-gcd = "brain_games.scripts.brain_gcd:main"

[tool.poetry.dependencies]
python = "^3.6.9"
prompt = "^0.4.1"

[tool.poetry.dev-dependencies]
flake8 = "^3.7.9"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
