[tool.poetry]
name = "kotano_brain_games"
version = "0.7.0"
description = "Hexlet python project called 'Brain Games'"
authors = ["kotano <kot4no@gmail.com>"]
readme = "README.md"
repository = "https://github/kotano/python-project-lvl1"
classifiers = [
    "Topic :: Games/Entertainment",
    "Development Status :: 3 - Alpha",
]
packages = [
    { include = "brain_games" },
]

[tool.poetry.scripts]
brain-games = "brain_games.brain_game:main"
brain-even = "brain_games.scripts.brain_even:main"
brain-calc = "brain_games.scripts.brain_calc:main"
brain-gcd = "brain_games.scripts.brain_gcd:main"
brain-progression = "brain_games.scripts.brain_progression:main"
brain-prime = "brain_games.scripts.brain_prime:main"

[[tool.poetry.source]]
name = "test_pypi"
url = "https://test.pypi.org/simple"

[tool.poetry.dependencies]
python = "^3.6.9"
prompt = "^0.4.1"

[tool.poetry.dev-dependencies]
flake8 = "^3.7.9"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
